force-app/main/default/objects/Note__c/fields/Cloned_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Task_Id__c</fullName>
    <label>Cloned Task Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>