force-app/main/default/objects/Note__c/fields/Customer_Application__c.field-meta.xml
<CustomField>
    <fullName>Customer_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Application</label>
    <referenceTo>Customer_Application__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>