force-app/main/default/objects/Note__c/fields/Delete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delete_Reason__c</fullName>
    <label>Delete Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>