force-app/main/default/objects/Note__c/fields/EventTypeId__c.field-meta.xml
<CustomField>
    <fullName>EventTypeId__c</fullName>
    <label>EventTypeId</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AddressChangeNote</fullName>
            </value>
            <value>
                <fullName>AppEZSentNote</fullName>
            </value>
            <value>
                <fullName>AppSentNote</fullName>
            </value>
            <value>
                <fullName>AttorneyFormNote</fullName>
            </value>
            <value>
                <fullName>CancellationNote</fullName>
            </value>
            <value>
                <fullName>CertInsReqNote</fullName>
            </value>
            <value>
                <fullName>CLECreditNote</fullName>
            </value>
            <value>
                <fullName>DeathNote</fullName>
            </value>
            <value>
                <fullName>FileLocationNote</fullName>
            </value>
            <value>
                <fullName>FirmDisolveNote</fullName>
            </value>
            <value>
                <fullName>FollowUpNote</fullName>
            </value>
            <value>
                <fullName>LetterNote</fullName>
            </value>
            <value>
                <fullName>LimitDedNote</fullName>
            </value>
            <value>
                <fullName>LossRunReqNote</fullName>
            </value>
            <value>
                <fullName>NewBusinessNote</fullName>
            </value>
            <value>
                <fullName>NP1</fullName>
            </value>
            <value>
                <fullName>PhoneNote</fullName>
            </value>
            <value>
                <fullName>PleadingNote</fullName>
            </value>
            <value>
                <fullName>PolicyBoundNote</fullName>
            </value>
            <value>
                <fullName>PreReviewNote</fullName>
            </value>
            <value>
                <fullName>PriorCarrierNote</fullName>
            </value>
            <value>
                <fullName>QuoteAcceptNote</fullName>
            </value>
            <value>
                <fullName>QuoteReleaseNote</fullName>
            </value>
            <value>
                <fullName>ReinsFacNote</fullName>
            </value>
            <value>
                <fullName>ReinstatementNote</fullName>
            </value>
            <value>
                <fullName>ReinsTreatyNote</fullName>
            </value>
            <value>
                <fullName>RenewalBlocked</fullName>
            </value>
            <value>
                <fullName>RenewalNote</fullName>
            </value>
            <value>
                <fullName>RistManageHtlnNote</fullName>
            </value>
            <value>
                <fullName>TailNote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>