force-app/main/default/objects/Note__c/fields/of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>of_Attachments__c</fullName>
    <defaultValue>0</defaultValue>
    <label># of Attachments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>