force-app/main/default/objects/Note__c/fields/Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Time__c</fullName>
    <label>Reminder Time</label>
    <type>DateTime</type>
</CustomField>