force-app/main/default/objects/Note__c/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 5) OR (3 AND 4 AND 5) OR ( NOT 5)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Claim</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Claims, Claims Handler</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Account, Application/Policy</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Underwriting, Sales</value>
        </filterItems>
        <filterItems>
            <field>$Source.Create_Task__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Notes</relationshipName>
    <type>Lookup</type>
</CustomField>