force-app/main/default/objects/Note__c/recordTypes/Application_Policy.recordType-meta.xml
<RecordType>
    <fullName>Application_Policy</fullName>
    <active>true</active>
    <label>Application/Policy</label>
</RecordType>