force-app/main/default/objects/Note__c/recordTypes/Claim.recordType-meta.xml
<RecordType>
    <fullName>Claim</fullName>
    <active>true</active>
    <label>Claim</label>
</RecordType>