force-app/main/default/objects/Note__c/validationRules/Create_Task_for_Pending_Status_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Task_for_Pending_Status_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c,&apos;Pending&apos;)),Create_Task__c,ISNEW())</errorConditionFormula>
    <errorMessage>Task can only be created for pending note.</errorMessage>
</ValidationRule>