force-app/main/default/objects/Note__c/validationRules/Due_Date_Required_Create_Task_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Required_Create_Task_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Create_Task__c,OR(ISBLANK(Due_Date__c),ISBLANK(Task_Owner__c)))</errorConditionFormula>
    <errorMessage>Due Date and Task owner is mandatory to create a task</errorMessage>
</ValidationRule>