force-app/main/default/objects/Note__c/validationRules/Lock_Record_After_24_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_After_24_Hours</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISCHANGED( Claim__c ),ISCHANGED( Account__c ),ISCHANGED( Policy__c ),ISCHANGED( Event_Date__c ),ISCHANGED( EventTypeId__c ),ISCHANGED( Subject__c ),ISCHANGED( Description__c )),(floor((NOW()-CreatedDate)*24))
+
(((((NOW()-CreatedDate)*24)-floor((NOW()-CreatedDate)*24))*60)/100) &gt; 24)</errorConditionFormula>
    <errorMessage>You are not allowed to edit Notes after 24 hours.</errorMessage>
</ValidationRule>